# vq-tracker

./: .gitignore  CHANGELOG.md  EXPORT_FORMAT.md  LICENSE  README.md  Untitled.xex  UserGuide.md  analyze.py  atariage_post_beta4.md  audio_engine.py  bank_packer.py  build.bat  build.ps1  build.py  build.sh  build_release.py  builder.py  builder_vq.py  cell_colors.py  clipboard_text.py  codebook.py  constants.py  data_model.py  dpg_keys.py  encoder_base.py  experiment.py  file_io.py  helpers.py  key_config.py  keyboard.json  keyboard.py  mads_exporter.py  main.py  mod_analyzer.py  mod_import.py  music-tracker-design-v3.1.md  native_dialog.py  operations.py  optimize.py  requirements.txt  (+19 more)
.tmp/: readme.txt
vq_converter/: .gitignore  README.md  build_app.py  build_debug.py  pokey_vq.spec  pyproject.toml  requirements.txt  restart-config.json  setup_dev.bat  setup_dev.sh
vq_converter/docs/: POKEY_Guide.md  algorithm_explanation.md  player.md  sample_player.md  tracker_integration.md
vq_converter/docs/future/: multiplexing.md
vq_converter/outputs/: readme.txt
vq_converter/players/: pitch_player.asm  player.asm  raw_player.asm  sample_player.asm  song_player.asm  tracker_player.asm
vq_converter/players/common/: atari.inc  zeropage.inc
vq_converter/pokey_vq/: gui.py
vq_converter/pokey_vq/cli/: __init__.py  builder.py  main.py
vq_converter/pokey_vq/core/: pokey_table.py
vq_converter/pokey_vq/encoders/: raw.py  vq.py
vq_converter/pokey_vq/gui/: __main__.py  app.py  default_config.json
vq_converter/tests/: gen_test_audio.py  test_build_matrix.py
(+93 files in other folders)
